k8s/waf-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudflare-tunnel
  annotations:
    cloudflare.com/tunnel-id: "${CLOUDFLARE_TUNNEL_ID}"
    cloudflare.com/credentials-secret: "cloudflare-credentials"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: websocket
